[package]
name = "cgi-bin"
version = "0.0.1"
edition = "2021"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
categories = ["command-line-utilities", "network-programming", "web-programming::http-server"]
keywords = ["cgi", "http"]
description = "Simple CGI server"
license = "MIT"
repository = "https://github.com/reu/cgi-bin"

[dependencies]
bytes = "1.0"
clap = "2.33"
futures = "0.3"
httparse = "1.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }